2003/08/21 0:41 ebassi

	* t/07.GnomePrintUnit.t: fixed GnomePrintUnit test.

2003/08/21 0:22 ebassi
	
	* xs/GnomePrintUnit.xs: implemented Gnome2::Print::Unit methods.
	* xs/GnomePrintDialog.xs: default flag (=0) for GnomePrintDialog
	  constructor.
	* xs/GnomeFont.xs: corrected a stupid typo.
	* Makefile.PL: removed libgnomeprintui-2.0 from the package
	  configuration setup; libgnomeprintui-2.0 (version 1.11x), needed
	  by GNOME 2.0, still uses the old Glib 1.2 type system, so it won't
	  compile anyway. Only libgnomeprint/libgnomeprintui >= 2.2 will be
	  supported.

2003/08/19 21:11 rwmcfa1

	* Makefile.PL: added realclean removal of build dir to postamble 
	section.

2003/08/18 14:44 ebassi
	
	* xs/GnomePrint2.xs: added "get_version" class method; this method
	  returns a string containing the version of libgnomeprint, as taken
	  from the package config.
	* pm/Config.pm: constant keys for GnomePrintConfig.
	* xs/GnomePrintConfig.xs: get/set methods and key macros.
	* Makefile.PL: dropped libgnomeprint-2.2 from PkgConfig->find; added a
	  check for libgnomeprint version, in order to support older releases.
	
2003/08/16 16:58 ebassi

	* *: initial ChangeLog entry.  libgnomeprintui is completely wrapped,
	     libgnomeprint binding lacks of GnomePrintUnit, GnomePrintPaper,
	     GnomeFontFace and GnomeGlyphList.