@@ -1,0 +1,80 @@
+
+Gnome2::Print version 0.5
+===========================
+
+The Gnome2::Print module allows a perl developer to use the Gnome Printing
+libraries with Gtk2-Perl.  Find out more about Gnome+ at http://www.gnome.org.
+
+The perl bindings follow the C API very closely, and the C reference
+documentation should be considered the canonical source.
+
+To discuss gtk2-perl, ask questions and flame/praise the authors,
+join gtk-perl-list@gnome.org at lists.gnome.org.
+
+Also have a look at the gtk2-perl website and sourceforge project page,
+http://gtk2-perl.sourceforge.net
+
+FIXME we have no other documentation, but we probably need it.
+
+
+INSTALLATION
+
+To install this module type the following:
+
+   perl Makefile.PL
+   make
+   make test
+   make install
+
+
+To avoid installing to a system directory, since this is a beta release,
+you can change the installation prefix at Makefile.PL time with
+
+   perl Makefile.PL PREFIX=/some/other/place
+
+This will install the module to the subdirectory lib/perl5 under the given
+prefix.  If this is not already in perl's include path, you'll need to tell
+perl how to get to this library directory so you can use it; there are three
+ways:
+
+  in your environment (the easiest):
+    PERL5LIB=/some/other/place/lib/perl5/site_perl:$PERL5LIB
+
+  on the perl command line:
+    perl -I /some/other/place/lib/perl5/site_perl yourscript
+
+  in the code of your perl script:
+    use lib '/some/other/place/lib/perl5/site_perl';
+  
+
+DEPENDENCIES
+
+This module requires these other modules and libraries:
+
+  perl >= 5.8.0
+  Glib >= 0.26 (perl module and requisite C libraries)
+  Gtk2 >= 0.26 (perl module and requisite C libraries)
+  libgnomeprintui-2.2 (C library)
+
+
+COPYRIGHT AND LICENCE
+
+Copyright (C) 2003 by the gtk2-perl team (see the file AUTHORS for a
+complete list)
+
+This library is free software; you can redistribute it and/or
+modify it under the terms of the GNU Library General Public
+License as published by the Free Software Foundation; either
+version 2 of the License, or (at your option) any later version.
+
+This library is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+Library General Public License for more details.
+
+You should have received a copy of the GNU Library General Public
+License along with this library; if not, write to the 
+Free Software Foundation, Inc., 59 Temple Place - Suite 330, 
+Boston, MA  02111-1307  USA.
+:w
+
